--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <h1 class="xh_text_center xh_text_upper"><span class="xh_error">CTRL + F</span> của <span
             class="xh_text_blue">BROWSER</span> để tìm kiếm từ khóa trong tabs</h1>
-    <span class="xh_text_center xh_block xh_text_red xh_text_upper xh_text_blod">(chạy tốt với CHROME)</span>
+    <span class="xh_text_center xh_block xh_text_red xh_text_upper xh_text_blod">(chạy tốt với CHROME phiên bản mới)</span>
 
     <section class="tabs-menu">
 
