--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./assets/css/customize.css">
 </head>
 
-<body onload="sh_highlightDocument();">
+<body>
 
     <h1 class="xh_text_center xh_text_upper"><span class="xh_error">CTRL + F</span> của <span
             class="xh_text_blue">BROWSER</span> để tìm kiếm từ khóa trong tabs</h1>
