--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h3 class="xh_text_red">Solution:</h3>
             <pre class="sh_javascript">
 
-                <a href="https://www.online-toolz.com/tools/text-html-entities-convertor.php" class="xh_a_none xh_text_fff">
+                <a href="https://www.online-toolz.com/tools/text-html-entities-convertor.php" target="_blank" class="xh_a_none xh_text_fff">
                     https://www.online-toolz.com/tools/text-html-entities-convertor.php
                 </a>
             </pre>
