--- a/index.html
+++ b/index.html
@@ -31,12 +31,9 @@
         <h2>JavaScript Convert to HTML Entities online</h2>
         <div>
             <h3 class="xh_text_red">Solution:</h3>
-            <pre class="sh_javascript">
-
-                <a href="https://www.online-toolz.com/tools/text-html-entities-convertor.php" target="_blank" class="xh_a_none xh_text_fff">
-                    https://www.online-toolz.com/tools/text-html-entities-convertor.php
-                </a>
-            </pre>
+            <a href="https://www.online-toolz.com/tools/text-html-entities-convertor.php" target="_blank" class="xh_a_none">
+                https://www.online-toolz.com/tools/text-html-entities-convertor.php
+            </a>
         </div>
     </div>
     <!-- JavaScript Convert to HTML Entities online -->
