--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
         mới)</span>
 
 
+    <!-- Create React App -->
+    <div class="xh_border">
+        <h2>Create React App</h2>
+        <div>
+            <h3 class="xh_text_red">Solution:</h3>
+            <p>You’ll need to have Node >= 10.16 and npm >= 5.6 on your machine. To create a project, run:</p>
+            <pre class="sh_html">
+
+                npm init -y
+
+                npx create-react-app my-app
+                cd my-app
+                npm start
+            </pre>
+        </div>
+    </div>
+    <!-- Create React App -->
+
     <!-- JavaScript Convert to HTML Entities online -->
     <div class="xh_border">
         <h2>JavaScript Convert to HTML Entities online</h2>
