--- a/index.html
+++ b/index.html
@@ -25,6 +25,43 @@
     <span class="xh_text_center xh_block xh_text_red xh_text_upper xh_text_blod">(chạy tốt với CHROME phiên bản
         mới)</span>
 
+    <!-- Mail Fake -->
+    <div class="xh_border">
+        <h2>Mail Fake</h2>
+        <div>
+            <p>vi.emailfake.com : <a href="https://vi.emailfake.com/">emailfake</a></p>
+        </div>
+    </div>
+    <!-- Mail Fake -->
+
+    <!-- I can't install react-chat-engine with npm -->
+    <div class="xh_border">
+        <h2>I can't install react-chat-engine with npm</h2>
+        <div class="xh_w_100 xh_text_center">
+            <img src="./assets/images/react-chat-engine.PNG">
+        </div>
+        <div>
+            <h3 class="xh_text_red">Solution:</h3>
+            <p>This error comes from version 7.x of npm.</p>
+            <p>Please try again with the <span class="xh_text_red">--legacy-peer-deps</span> option.</p>
+            <pre class="sh_html">
+
+                npm i react-chat-engine --legacy-peer-deps
+            </pre>
+        </div>
+    </div>
+    <!-- I can't install react-chat-engine with npm -->
+
+    <!-- npm install -->
+    <div class="xh_border">
+        <h2>npm install</h2>
+        <div>
+            <p>@ant-design/icons: <a href="https://ant.design/" target="_blank">ant.design</a></p>
+            <p>axios: <span>Promise based HTTP client for the browser and node.js</span></p>
+            <p>react-chat-engine: <a href="https://chatengine.io/" target="_blank">chatengine.io</a>, <a href="https://www.npmjs.com/package/react-chat-engine" target="_blank">npmjs</a></p>
+        </div>
+    </div>
+    <!-- npm install -->
 
     <!-- Create React App -->
     <div class="xh_border">
@@ -40,6 +77,11 @@
                 cd my-app
                 npm start
             </pre>
+            <p>Tạo source ở thư mục hiện tại</p>
+            <pre class="sh_html">
+
+                npx create-react-app ./
+            </pre>
         </div>
     </div>
     <!-- Create React App -->
@@ -49,7 +91,8 @@
         <h2>JavaScript Convert to HTML Entities online</h2>
         <div>
             <h3 class="xh_text_red">Solution:</h3>
-            <a href="https://www.online-toolz.com/tools/text-html-entities-convertor.php" target="_blank" class="xh_a_none">
+            <a href="https://www.online-toolz.com/tools/text-html-entities-convertor.php" target="_blank"
+                class="xh_a_none">
                 https://www.online-toolz.com/tools/text-html-entities-convertor.php
             </a>
         </div>
