--- a/index.html
+++ b/index.html
@@ -25,6 +25,39 @@
     <span class="xh_text_center xh_block xh_text_red xh_text_upper xh_text_blod">(chạy tốt với CHROME phiên bản
         mới)</span>
 
+
+    <!-- Website ReactJS Hay -->
+    <div class="xh_border">
+        <h2>Website ReactJS Hay</h2>
+        <div>
+            <h3 class="xh_text_red">Solution:</h3>
+            <a href="https://reactjsexample.com/" target="_blank" class="xh_a_none">
+                https://reactjsexample.com/
+            </a>
+        </div>
+    </div>
+    <!-- Website ReactJS Hay -->
+
+    <!-- Redux -->
+    <div class="xh_border">
+        <h2>Redux</h2>
+        <div>
+            <div class="xh_w_100 xh_text_center">
+                <img src="./assets/images/redux.jpg">
+            </div>
+            <p>Redux + ReactJS:</p>
+            <h3 class="xh_text_red">Solution:</h3>
+            <p>Cài đặt 2 package:</p>
+            <p>- redux: <a href="https://redux.js.org" target="_blank">redux</a>, <a
+                    href="https://www.npmjs.com/package/redux" target="_blank">npmjs</a></p>
+            <p>- react-redux: <a href="https://www.npmjs.com/package/react-redux" target="_blank">react-redux</a></p>
+            <div class="xh_w_100 xh_text_center">
+                <img src="./assets/images/redux-map.PNG">
+            </div>
+        </div>
+    </div>
+    <!-- Redux -->
+
     <!-- Mail Fake -->
     <div class="xh_border">
         <h2>Mail Fake</h2>
@@ -56,9 +89,21 @@
     <div class="xh_border">
         <h2>npm install</h2>
         <div>
-            <p>@ant-design/icons: <a href="https://ant.design/" target="_blank">ant.design</a></p>
+            <p>@ant-design/icons: <a href="https://ant.design" target="_blank">ant.design</a></p>
             <p>axios: <span>Promise based HTTP client for the browser and node.js</span></p>
-            <p>react-chat-engine: <a href="https://chatengine.io/" target="_blank">chatengine.io</a>, <a href="https://www.npmjs.com/package/react-chat-engine" target="_blank">npmjs</a></p>
+            <p>react-chat-engine: <a href="https://chatengine.io" target="_blank">chatengine.io</a>, <a
+                    href="https://www.npmjs.com/package/react-chat-engine" target="_blank">npmjs</a></p>
+            <p>antd: <a href="https://ant.design/components/overview" target="_blank">antd</a>, <a
+                    href="https://www.npmjs.com/package/antd" target="_blank">npmjs</a></p>
+            <p>redux: <a href="https://redux.js.org" target="_blank">redux</a>, <a
+                    href="https://www.npmjs.com/package/redux" target="_blank">npmjs</a></p>
+            <p>react-emoji-render: <a href="https://www.npmjs.com/package/react-emoji-render" target="_blank">npmjs</a>
+                (<span>emoji-cheat-sheet: <a href="https://www.webfx.com/tools/emoji-cheat-sheet"
+                        target="_blank">emoji-cheat-sheet</a>, <a
+                        href="https://github.com/ikatyang/emoji-cheat-sheet/blob/master/README.md"
+                        target="_blank">github</a></span>)
+            </p>
+            <p>react-redux: <a href="https://www.npmjs.com/package/react-redux" target="_blank">npmjs</a>
         </div>
     </div>
     <!-- npm install -->
