--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="xh_border">
         <h2>Mail Fake</h2>
         <div>
-            <p>vi.emailfake.com : <a href="https://vi.emailfake.com/">emailfake</a></p>
+            <p>vi.emailfake.com : <a href="https://vi.emailfake.com/" target="_blank">emailfake</a></p>
         </div>
     </div>
     <!-- Mail Fake -->
